# filaxy-vault

./: .gitignore  LICENSE  README.md
core/: Cargo.toml
core/src/: error.rs  generator.rs  lib.rs
core/src/crypto/: cipher.rs  kdf.rs  keyfile.rs  mod.rs  random.rs
core/src/import/: csv.rs  google_auth.rs  mod.rs  presets.rs  xlsx.rs
core/src/vault/: format.rs  health.rs  mod.rs  model.rs  store.rs
core/tests/: integration.rs
core/tests/fixtures/: sample.xlsx
docs/superpowers/plans/: 2026-06-24-filaxy-vault-core.md  2026-06-24-filaxy-vault-tauri.md  2026-06-24-filaxy-vault-ui.md
docs/superpowers/specs/: 2026-06-24-filaxy-vault-phase-1-2-design.md
src-tauri/: Cargo.toml  entitlements.mas.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backoff.rs  biometric.rs  commands.rs  dto.rs  keychain.rs  lib.rs  main.rs  menu.rs  session.rs  state.rs  totp.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  api.test.ts  api.ts  index.css  main.tsx  types.ts
ui/src/components/: Attachments.tsx  Avatar.tsx  Button.tsx  ConfirmDialog.tsx  EntropyMeter.tsx  EntryDetail.tsx  Footer.tsx  HelpModal.tsx  IconPicker.tsx  LangSwitch.tsx  LockButton.tsx  Logo.tsx  MenuBar.tsx  Modal.tsx  PasswordField.tsx  SeedDetail.tsx  ThemeSwitch.tsx  TopBar.tsx  TotpDetail.tsx  VaultBackdrop.tsx  brands.ts  brands_extra.ts
ui/src/hooks/: useGenerator.test.ts  useGenerator.ts
ui/src/i18n/: I18nContext.tsx  en.ts  es.ts  i18n.test.tsx
ui/src/lib/: actions.ts  qr.ts
ui/src/screens/: EntryEditor.tsx  GaImport.tsx  GeneratorPanel.tsx  HealthView.tsx  ImportWizard.tsx  Onboarding.tsx  SeedEditor.tsx  SettingsScreen.tsx  StatsView.tsx  TotpEditor.tsx  Unlock.tsx  VaultList.tsx  VaultWorkspace.tsx
ui/src/theme/: ThemeContext.tsx
