[package]
name = "filaxy-vault"
version = "0.1.0"
edition = "2021"
description = "Filaxy Vault — local-first password manager"

[lib]
name = "filaxy_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
filaxy-vault-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
totp-rs = "5"
zeroize = { version = "1.8", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

# macOS-only: Touch ID unlock via LocalAuthentication
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError"] }
objc2-local-authentication = { version = "0.3", features = ["LAContext", "block2"] }
block2 = "0.6"

[dev-dependencies]
data-encoding = "2"
